--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=Test;User Id=postgres;Password=987849660;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=hometask1;User Id=postgres;Password=12345;"
   }
 }
